--- a/EsSplit/templates/index.html
+++ b/EsSplit/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podziel Rachunek {% block title %}{% endblock %}</title>
+    <title>Podziel Rachunek</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'img/favv16.png' %}">
@@ -19,10 +19,13 @@
             <input type="search" placeholder="Szukaj">
             <button><img src="{% static 'img/search.png' %}" alt="szukanie"></button>
         </div>
-        <button class="user-profile">
+
+        <div class="user-profile">
             <img src="{% static 'img/profile.png' %}" alt="Profil">
             <p>Cześć, Rakib</p>
-        </button>
+            <a href="{% url 'logout' %}" class="logout-link">Wyloguj się</a>
+        </div>
+
 
         <div class="switch-container">
             <label class="switch">
@@ -87,6 +90,7 @@
             </div>
         </section>
     </main>
+
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 
