--- a/EsSplit/templates/index.html
+++ b/EsSplit/templates/index.html
@@ -61,6 +61,19 @@
                 <div id="spill-results"></div>
             </div>
 
+            <section class="friends-list">
+                <div class="friends-container">
+                    <h2>Lista znajomych</h2>
+                    <ul id="friends-list">
+                        <!-- Lista znajomych zostanie wygenerowana tutaj -->
+                        <li>example</li>
+                        <li>example</li>
+                        <li>example</li>
+
+                    </ul>
+                </div>
+            </section>
+
             <div class="recent-splits">
                 <h2>Ostatnie rozliczenia</h2>
                 <div class="split-item">
@@ -76,7 +89,12 @@
                     <p>28,20 $</p>
                 </div>
             </div>
+
+
         </section>
+
+
+
         <section class="split-request2">
             <div class="statistics">
                 <div class="stat-card">
