--- a/EsSplit/static/css/style.css
+++ b/EsSplit/static/css/style.css
@@ -554,3 +554,137 @@ body.dark-theme .friends-list a {
 body.dark-theme .friends-list a:hover {
     color: #2196F3;
 }
+
+
+/* Media Queries for Responsive Design */
+
+@media screen and (max-width: 1024px) {
+    .split-request {
+        flex-direction: column;
+    }
+
+    .request-card {
+        margin-bottom: 30px;
+    }
+
+    .recent-splits {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .recent-splits ul {
+        flex-direction: column;
+    }
+
+    .recent-splits li {
+        margin-bottom: 10px;
+        width: 100%;
+    }
+
+    .statistics {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .stat-card {
+        margin-bottom: 20px;
+    }
+
+    .create-spill {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .friends-list {
+        margin-left: 0;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .side-nav {
+        display: none;
+    }
+
+    main {
+        padding-top: 60px;
+        margin-top: 70px;
+        padding: 1em;
+    }
+
+    .create-spill {
+        margin-bottom: 20px;
+    }
+
+    .request-card {
+        margin-bottom: 30px;
+    }
+
+
+    .split-request2 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .statistics {
+        width: 100%;
+    }
+}
+
+/* Styl dla szerokości ekranu 480px i mniejszej */
+@media screen and (max-width: 480px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        background: #333;
+        color: white;
+    }
+
+    .logo img {
+        height: 40px;
+        /* Możesz dostosować rozmiar logo */
+    }
+
+    .search-bar,
+    .logout-link,
+    .switch-container {
+        display: none;
+        /* Ukryj te elementy na małych ekranach */
+    }
+
+    .menu-toggle {
+        font-size: 24px;
+        cursor: pointer;
+        display: block;
+    }
+
+    .menu-content {
+        display: none;
+        flex-direction: column;
+        background: #444;
+        padding: 10px;
+        position: absolute;
+        top: 60px;
+        /* dostosuj w zależności od wysokości nagłówka */
+        width: 100%;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .menu-content.show {
+        display: flex;
+    }
+
+    .menu-content a {
+        color: white;
+        padding: 10px;
+        text-decoration: none;
+        border-bottom: 1px solid #555;
+    }
+
+    .menu-content a:last-child {
+        border-bottom: none;
+    }
+}
