--- a/EsSplit/templates/login.html
+++ b/EsSplit/templates/login.html
@@ -16,7 +16,7 @@
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="txt_field">
-                <input type="text" name="username" required>
+                <input type="text" name="email" required>
                 <span></span>
                 <label>Email Address</label>
             </div>
