--- a/EsSplit/static/css/style.css
+++ b/EsSplit/static/css/style.css
@@ -15,7 +15,7 @@ header {
     color: #fff;
     padding: 1em;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0;
@@ -24,6 +24,7 @@ header {
     z-index: 100;
 }
 
+/* Styl dla logo */
 .logo {
     width: 50px;
     height: 50px;
@@ -33,6 +34,40 @@ header {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+
+.search-friend {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.search-friend input[type="text"] {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 150px;
+    /* Zmień szerokość pola tekstowego */
+    background-color: #fff;
+    color: #3F51B5;
+    border-bottom: 20px;
+    vertical-align: middle;
+    /* Wyrównanie pionowe do środka */
+}
+
+.search-friend button {
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    /* Zmień margines i padding */
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 5px;
+    /* Dodaj margines między polem tekstowym a przyciskiem */
+    vertical-align: middle;
+    /* Wyrównanie pionowe do środka */
 }
 
 .user-profile {
@@ -66,29 +101,6 @@ header {
     display: block;
 }
 
-.search-bar {
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
-}
-
-.search-bar input[type="search"] {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    width: 200px;
-    background-color: #fff;
-    color: #3F51B5;
-}
-
-.search-bar button {
-    background-color: #3F51B5;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-}
 
 .user-profile {
     display: flex;
@@ -354,8 +366,7 @@ main {
     border-radius: 10px;
     width: 100%;
     max-width: 600px;
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-left: 16px;
 }
 
 .create-spill h2 {
@@ -410,6 +421,61 @@ main {
     margin-top: 2em;
 }
 
+
+/* Styl dla przycisku "Wybierz znajomych" */
+#choose-friends-button {
+    background-color: #3F51B5;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+#popup-container {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+/* Styl dla okienka pop-up */
+#popup-container {
+    display: none;
+    /* Ukryj okienko pop-up domyślnie */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    /* Upewnij się, że okienko pop-up jest na wierzchu */
+}
+
+#popup-content {
+    /* Styl dla zawartości okienka pop-up */
+}
+
+#popup-container ul {
+    list-style: none;
+    padding: 0;
+}
+
+#popup-container li {
+    margin-bottom: 10px;
+}
+
 .friends-list {
     background-color: #F5F5F5;
     padding: 1em;
@@ -441,9 +507,28 @@ main {
     color: #2196F3;
 }
 
-/* Czarny Motyw */
+/* Styl dla listy znajomych */
+#friends-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 100%;
+}
 
-/* Dark Theme Styles */
+#friends-list div {
+    background-color: #f5f5f5;
+    padding: 10px;
+    border-radius: 15px;
+    margin: 5px;
+    cursor: move;
+    /* Włącz możliwość przeciągania */
+    border: 1px solid #ddd;
+    /* Dodaje cienką ramkę */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    /* Dodaje delikatny cień */
+}
+
+/* Czarny Motyw */
 
 body.dark-theme {
     background-color: #282828;
@@ -555,8 +640,11 @@ body.dark-theme .friends-list a:hover {
     color: #2196F3;
 }
 
+body.dark-theme #friends-list div {
+    background-color: #383838;
+    color: #ddd;
+}
 
-/* Media Queries for Responsive Design */
 
 @media screen and (max-width: 1024px) {
     .split-request {
