--- a/EsSplit/static/css/style.css
+++ b/EsSplit/static/css/style.css
@@ -194,12 +194,13 @@ input:checked+.slider:before {
 
 main {
     padding-top: 60px;
-    margin-top: 70px;
+    margin-top: 130px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 2em;
 }
+
 
 .side-nav {
     width: 200px;
