--- a/EsSplit/templates/index.html
+++ b/EsSplit/templates/index.html
@@ -82,11 +82,11 @@
         </script>
 
         <section class="split-request">
-            <div class="request-card">
+            <!-- <div class="request-card">
                 <h3>Cześć Mike!</h3>
                 <p>Rakib poprosił cię o płatność rachunku w wysokości 72,80 $ z Sushi & bar</p>
                 <button>Uczestnicz</button>
-            </div>
+            </div> -->
 
             <div class="create-spill">
                 <h2>Create Spill</h2>
